--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         .bg {
             width: 360px;
             /*내 파일 사진으로 해도 공유 되는지 확인*/
-            background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bg-grid.png");
+            background-image: url("http://drive.google.com/uc?export=view&id=1oupUrHiEbcbp_NibAIvMCG5oDZj7osL3");
         }
 
         .bucket {
